[package]
name = "vbyte"
version = "0.2.0"
edition = "2021"
authors  = ["Nils Martel nilsmartel@yahoo.de"]

description = "variable length integer compression"
repository = "https://github.com/nilsmartel/vbyte-compression"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["compression", "int", "integer", "variable", "single"]
categories = ["algorithms", "compression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
